# sms-solvers

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: blank.yml
assets/: countries_with_dial_code.json  hero_sms_countries.json
examples/: basic_usage.rs  config_presets.rs  country_mapping.rs  retry_callbacks.rs  with_cancellation.rs  with_retry.rs
src/: errors.rs  lib.rs  provider.rs  retry.rs  service.rs  types.rs
src/providers/: mod.rs  traits.rs
src/providers/hero_sms/: client.rs  countries.rs  errors.rs  mod.rs  provider.rs  response.rs  types.rs
src/providers/retryable/: mod.rs
src/providers/sms_activate/: client.rs  countries.rs  errors.rs  mod.rs  provider.rs  response.rs  services.rs
src/service/: config.rs  error.rs  mod.rs  structure.rs  traits.rs
src/utils/: dial_code.rs  mod.rs  retry.rs
tests/: country_mapping.rs  dial_code_mapping.rs  hero_sms_api.rs  sms_activate_api.rs
