[package]
name = "sms-solvers"
version = "0.1.1"
edition = "2024"
description = "Generic SMS verification library with provider abstraction"
license = "MIT"
readme = "README.md"
keywords = ["sms", "verification", "otp", "sms-activate"]
categories = ["api-bindings", "authentication"]

[features]
default = ["sms-activate", "tracing"]
sms-activate = []
# Enable tracing instrumentation with OpenTelemetry support
tracing = ["dep:tracing", "dep:tracing-opentelemetry", "dep:opentelemetry"]

[dependencies]
# Core
tokio = { version = "1.44", features = ["time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = { version = "0.4", features = ["json"] }
url = { version = "2.5", features = ["serde"] }
secrecy = { version = "0.10", features = ["serde"] }
serde_urlencoded = "0.7"

# Country codes
isocountry = "0.3"

# Retry logic
backon = "1.5"

# Regex for error parsing
regex = "1.11"
once_cell = "1.20"

# Tracing (optional)
tracing = { version = "0.1", optional = true }
tracing-opentelemetry = { version = "0.31", optional = true }
opentelemetry = { version = "0.30", features = ["trace"], optional = true }

[dev-dependencies]
tokio = { version = "1.44", features = ["full", "macros"] }
wiremock = "0.6"
dotenvy = "0.15"